--- a/css/index.css
+++ b/css/index.css
@@ -16,10 +16,13 @@
   text-align: center;
 }
 #root .checkbox .allThanhPho.modal.fade.in {
-  display: grid !important;
+  display: grid;
+  max-width: 1000px;
+  margin: auto;
   grid-template-columns: auto auto auto auto auto auto;
   background-color: #2196F3;
   padding: 10px;
+  align-items: center;
 }
 #root .checkbox .allThanhPho.modal.fade.in .thanhpho {
   background-color: rgba(255, 255, 255, 0.8);
@@ -27,6 +30,7 @@
   padding: 10px;
   font-size: 13px;
   text-align: center;
+  width: 100%;
 }
 #root .checkbox .allThanhPho.modal.fade.in .thanhpho .alltinh {
   display: grid;
