--- a/css/index.scss
+++ b/css/index.scss
@@ -13,11 +13,13 @@
         }
 
         .allThanhPho.modal.fade.in{
-            display: grid !important;
-
+            display: grid;
+            max-width: 1000px;
+            margin: auto;
             grid-template-columns: auto auto auto auto auto auto;
             background-color: #2196F3;
             padding: 10px;
+            align-items: center;
 
             .thanhpho{
                 background-color: rgba(255, 255, 255, 0.8);
@@ -25,6 +27,7 @@
                 padding: 10px;
                 font-size: 13px;
                 text-align: center;
+                width: 100%;
 
                 .alltinh{
                     display: grid;
