--- a/css/index.scss
+++ b/css/index.scss
@@ -15,7 +15,7 @@
         .allThanhPho.modal.fade.in{
             display: grid;
             max-width: 1000px;
-            margin: auto;
+            margin: 0 auto;
             grid-template-columns: auto auto auto auto auto auto;
             background-color: #2196F3;
             padding: 10px;
