--- a/css/index.scss
+++ b/css/index.scss
@@ -1,4 +1,4 @@
-*{margin: 0;padding: 0;}
+*{box-sizing:border-box; margin: 0;padding: 0;}
 
 #root{
     max-width: 1200px;
@@ -13,18 +13,46 @@
             text-align: center;
         }
 
-        .allThanhPho.modal.fade.in{
-            display: grid;
+        button{
+            padding: 10px 20px;
+            font-size: 15px;
+            text-align: center;
+            background-color: #2196F3;
+            color: #fff;
+            border-color: #2196F3;
+            border-radius: 4px;
+        }
+
+        .allThanhPho{
+            display: none;
             max-width: 1000px;
             margin: 0 auto;
             grid-template-columns: auto auto auto;
             background-color: #2196F3;
             padding: 10px;
             align-items: center;
+            position: fixed;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 999;
+            overflow-x: hidden;
+            overflow-y: auto;
 
             button.close{
-                font-size: 25px;
-                padding-right: 10px !important;
+                background: 0, 0;
+                font-size: 23px;
+                padding: 10px 0;
+                border: none;
+                color: black;
+                opacity: 0.2;
+                float: right;
+                padding-right: 20px;
+
+                &:hover{
+                    opacity: 1;
+                }
             }
 
             .thanhpho{
@@ -34,6 +62,18 @@
                 font-size: 13px;
                 text-align: center;
                 width: 100%;
+                max-width: 1000px;
+                margin: auto;
+
+                input{
+                    margin: 4px 0 0;
+                    margin-left: -20px;
+                }
+
+                label{
+                    padding-left: 20px;
+                    cursor: pointer;
+                }
 
                 .alltinh{
                     display: grid;
@@ -53,6 +93,18 @@
     // canvas{
     //     width: 60%;
     // }
+}
+
+.black{
+    display: none;
+    opacity: .5;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 990;
+    background-color: #000;
 }
 
 @import'responsive';
